[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Enemies/depression/word_attack.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/Danger_square.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Coder's Crux.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://env/Explosion_blue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/depression/word_explosion.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="word_attack" type="Node2D"]
position = Vector2( 167.761, 130 )
script = ExtResource( 1 )

[node name="Danger_square" parent="." instance=ExtResource( 2 )]

[node name="Projectile" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Projectile"]
anchor_right = 0.2
margin_left = -65.0
margin_top = -11.0
margin_right = 65.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "PLACEHOLDER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explosion_blue" parent="Projectile" instance=ExtResource( 4 )]

[node name="word_explosion" parent="Projectile" instance=ExtResource( 5 )]
